@@ -87,6 +87,9 @@ const gather_values = (values, inputs) => {
             if (element.type === "checkbox") {
                 values[name] = element.checked;
             }
+            else if (element.type === "number") {
+                values[name] = Number(element.value);
+            }
             else {
                 values[name] = element.value;
             }
